Integration partie AI